--- a/src/main/resources/web/index-template.html
+++ b/src/main/resources/web/index-template.html
@@ -77,6 +77,16 @@
     </footer>
     
     <footer class="page-footer grey" ng-show="user">
+        <div class="container">
+            <div class="row">
+                <div class="col l3 s12">
+                    <h5 class="red-text text-lighten-1">Connect</h5>
+                    <a href="https://twitter.com/Qaobee" target="_blank" class="white-text"><i class="fa fa-twitter-square fa-2x"></i></a>
+                    <a href="https://www.facebook.com/qaobee" target="_blank" class="white-text"><i class="fa fa-facebook-square fa-2x"></i></a>
+                    <a href="https://www.google.com/+QaobeeSARL" target="_blank" class="white-text"><i class="fa fa-google-plus-square fa-2x"></i></a>
+                </div>
+            </div>
+        </div>
         <div class="footer-copyright">
             <div class="container"><span class="white-text light">Copyright &copy; <b>Qaobee</b> 2015</span></div>
         </div>
