--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,19 @@
 <!doctype html>
 <html ng-app="qswarmWeb">
-  <head>
+<head>
+    <!--
+
+     _____                       _____
+  __|__   |__  ____    _____  __|___  |__  ______  ______
+ /     \     ||    \  /     \|   _  >    ||   ___||   ___|
+ |  +  |     ||     \ |     ||   _ <     ||   ___||   ___|
+ \___/\_\  __||__|\__\\_____/|______>  __||______||______|
+    |_____|                     |_____|
+
+
+2014
+
+ -->
     <meta charset="utf-8">
     <title>:: Qaobee ::</title>
     <meta name="description" content="">
@@ -18,83 +31,95 @@
     <!-- css files will be automatically insert here -->
     <!-- endinject -->
     <!-- endbuild -->
-  </head>
-  <body>
-    <!--[if lt IE 10]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-
-    <main>
-      <div id="main-container">
+</head>
+<body>
+<!--[if lt IE 10]>
+<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
+    your browser</a> to improve your experience.</p>
+<![endif]-->
+<!-- Header Menu -->
+<header ng-controller="MainCtrl">
+    <div header-menu user="user"></div>
+</header>
+<main>
+    <div id="main-container">
         <div ng-view class="view-animate" autoscroll="true"></div>
-      </div>
-    </main>
-    <footer class="page-footer grey" ng-hide="user">
-      <div class="container">
+    </div>
+</main>
+<footer class="page-footer grey" ng-hide="user">
+    <div class="container">
         <div class="row">
-          <div class="col l9 s12"><h5 class="red-text text-lighten-1">Company Bio</h5>
+            <div class="col l9 s12"><h5 class="red-text text-lighten-1">Company Bio</h5>
 
-            <p class="white-text light"><b>Qaobee</b> is a software company that develops and publishes digital
-              solutions for the sporting community. We are a band of bretons who value sports, new technologies,
-              innovation, teamwork and building things we can be proud of. During the week we come together to
-              create innovative solutions to simplify and optimize the sports managers activity.</p></div>
-          <div class="col l3 s12"><h5 class="red-text text-lighten-1">Connect</h5><a href="https://twitter.com/Qaobee"
-                                                                                     target="_blank"
-                                                                                     class="white-text"><i
-                  class="fa fa-twitter-square fa-2x"></i></a> <a href="https://www.facebook.com/qaobee"
-                                                                 target="_blank" class="white-text"><i
-                  class="fa fa-facebook-square fa-2x"></i></a> <a href="https://www.google.com/+QaobeeSARL"
-                                                                  target="_blank" class="white-text"><i
-                  class="fa fa-google-plus-square fa-2x"></i></a></div>
+                <p class="white-text light"><b>Qaobee</b> is a software company that develops and publishes digital
+                    solutions for the sporting community. We are a band of bretons who value sports, new technologies,
+                    innovation, teamwork and building things we can be proud of. During the week we come together to
+                    create innovative solutions to simplify and optimize the sports managers activity.</p></div>
+            <div class="col l3 s12"><h5 class="red-text text-lighten-1">Connect</h5><a href="https://twitter.com/Qaobee"
+                                                                                       target="_blank"
+                                                                                       class="white-text"><i
+                    class="fa fa-twitter-square fa-2x"></i></a> <a href="https://www.facebook.com/qaobee"
+                                                                   target="_blank" class="white-text"><i
+                    class="fa fa-facebook-square fa-2x"></i></a> <a href="https://www.google.com/+QaobeeSARL"
+                                                                    target="_blank" class="white-text"><i
+                    class="fa fa-google-plus-square fa-2x"></i></a></div>
         </div>
-      </div>
-      <div class="footer-copyright">
+    </div>
+    <div class="footer-copyright">
         <div class="container"><span class="white-text light">Copyright &copy; <b>Qaobee</b> 2015</span></div>
-      </div>
-    </footer>
-    <footer class="page-footer grey" ng-show="user">
-      <div class="container">
+    </div>
+</footer>
+<footer class="page-footer grey" ng-show="user">
+    <div class="container">
         <div class="row">
-          <div class="col l3 s12"><h5 class="red-text text-lighten-1">Connect</h5><a href="https://twitter.com/Qaobee"
-                                                                                     target="_blank"
-                                                                                     class="white-text"><i
-                  class="fa fa-twitter-square fa-2x"></i></a> <a href="https://www.facebook.com/qaobee"
-                                                                 target="_blank" class="white-text"><i
-                  class="fa fa-facebook-square fa-2x"></i></a> <a href="https://www.google.com/+QaobeeSARL"
-                                                                  target="_blank" class="white-text"><i
-                  class="fa fa-google-plus-square fa-2x"></i></a></div>
+            <div class="col l3 s12"><h5 class="red-text text-lighten-1">Connect</h5><a href="https://twitter.com/Qaobee"
+                                                                                       target="_blank"
+                                                                                       class="white-text"><i
+                    class="fa fa-twitter-square fa-2x"></i></a> <a href="https://www.facebook.com/qaobee"
+                                                                   target="_blank" class="white-text"><i
+                    class="fa fa-facebook-square fa-2x"></i></a> <a href="https://www.google.com/+QaobeeSARL"
+                                                                    target="_blank" class="white-text"><i
+                    class="fa fa-google-plus-square fa-2x"></i></a></div>
         </div>
-      </div>
-      <div class="footer-copyright">
+    </div>
+    <div class="footer-copyright">
         <div class="container"><span class="white-text light">Copyright &copy; <b>Qaobee</b> 2015</span></div>
-      </div>
-    </footer>
+    </div>
+</footer>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
-    </script>
+<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+<script>
+    (function (b, o, i, l, e, r) {
+        b.GoogleAnalyticsObject = l;
+        b[l] || (b[l] =
+                function () {
+                    (b[l].q = b[l].q || []).push(arguments)
+                });
+        b[l].l = +new Date;
+        e = o.createElement(i);
+        r = o.getElementsByTagName(i)[0];
+        e.src = '//www.google-analytics.com/analytics.js';
+        r.parentNode.insertBefore(e, r)
+    }(window, document, 'script', 'ga'));
+    ga('create', 'UA-XXXXX-X');
+    ga('send', 'pageview');
+</script>
 
-    <!-- build:js(src) scripts/vendor.js -->
-    <!-- bower:js -->
-    <!-- run `gulp inject` to automatically populate bower script dependencies -->
-    <!-- endbower -->
-    <!-- endbuild -->
+<!-- build:js(src) scripts/vendor.js -->
+<!-- bower:js -->
+<!-- run `gulp inject` to automatically populate bower script dependencies -->
+<!-- endbower -->
+<!-- endbuild -->
 
-    <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
-    <!-- inject:js -->
-    <!-- js files will be automatically insert here -->
-    <!-- endinject -->
+<!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
+<!-- inject:js -->
+<!-- js files will be automatically insert here -->
+<!-- endinject -->
 
-    <!-- inject:partials -->
-    <!-- angular templates will be automatically converted in js and inserted here -->
-    <!-- endinject -->
-    <!-- endbuild -->
+<!-- inject:partials -->
+<!-- angular templates will be automatically converted in js and inserted here -->
+<!-- endinject -->
+<!-- endbuild -->
 
-  </body>
+</body>
 </html>
