--- a/src/index.html
+++ b/src/index.html
@@ -33,14 +33,14 @@
     <!-- endinject -->
     <!-- endbuild -->
 </head>
-<body>
+<body ng-controller="MainCtrl">
 <!--[if lt IE 10]>
 <p class="browsehappy">You are using an <strong>outdated</strong>
     browser. Please <a href="http://browsehappy.com/">upgrade
     your browser</a> to improve your experience.</p>
 <![endif]-->
 <!-- Header Menu -->
-<header ng-controller="MainCtrl">
+<header>
     <div header-menu user="user"></div>
 </header>
 <main>
