--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 
  -->
     <meta charset="utf-8">
-    <title>:: Qaobee ::</title>
+    <title>Gestion of sports data | Qaobee</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="icon" href="favicon.ico"/>
