--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
 <!--[if lt IE 10]>
 <p class="browsehappy">You are using an <strong>outdated</strong>
     browser. Please <a href="http://browsehappy.com/">upgrade
-    your browser</a> to improve your experience.</p>
+        your browser</a> to improve your experience.</p>
 <![endif]-->
 <!-- Header Menu -->
 <header>
@@ -51,60 +51,65 @@
 <footer class="page-footer grey" ng-hide="user">
     <div class="container">
         <div class="row">
-            <div class="col l9 s12"><h5 class="red-text text-lighten-1">Company Bio</h5>
+           <!-- <div class="col l9 s12">
+                <h5 class="red-text text-lighten-1">Company Bio</h5>
 
                 <p class="white-text light"><b>Qaobee</b> is a software company that develops and publishes digital
                     solutions for the sporting community. We are a band of bretons who value sports, new technologies,
                     innovation, teamwork and building things we can be proud of. During the week we come together to
-                    create innovative solutions to simplify and optimize the sports managers activity.</p></div>
-            <div class="col l3 s12"><h5 class="red-text text-lighten-1">Connect</h5><a href="https://twitter.com/Qaobee"
-                                                                                       target="_blank"
-                                                                                       class="white-text"><i
-                    class="fa fa-twitter-square fa-2x"></i></a> <a href="https://www.facebook.com/qaobee"
-                                                                   target="_blank" class="white-text"><i
-                    class="fa fa-facebook-square fa-2x"></i></a> <a href="https://www.google.com/+QaobeeSARL"
-                                                                    target="_blank" class="white-text"><i
-                    class="fa fa-google-plus-square fa-2x"></i></a></div>
+                    create innovative solutions to simplify and optimize the sports managers activity.</p>
+            </div>-->
+            <div class="col l6 s12">
+                <h5 class="red-text text-lighten-1" translate="landing.connect"></h5>
+                <a href="https://twitter.com/Qaobee" target="_blank" class="white-text"><i
+                        class="fa fa-twitter-square fa-2x"></i></a>
+                <a href="https://www.facebook.com/qaobee" target="_blank" class="white-text"><i
+                        class="fa fa-facebook-square fa-2x"></i></a>
+                <a href="https://www.google.com/+QaobeeSARL" target="_blank" class="white-text"><i
+                        class="fa fa-google-plus-square fa-2x"></i></a>
+            </div>
         </div>
     </div>
     <div class="footer-copyright">
-        <div class="container"><span class="white-text light">Copyright &copy; <b>Qaobee</b> 2015</span></div>
+        <div class="container"><span class="white-text light">Copyright &copy; <b>Qaobee</b> 2015
+         | <a href="#/legals" class="white-text" translate="landing.legals"></a></span></div>
     </div>
 </footer>
 <footer class="page-footer grey" ng-show="user">
     <div class="container">
         <div class="row">
-            <div class="col l3 s12"><h5 class="red-text text-lighten-1">Connect</h5><a href="https://twitter.com/Qaobee"
-                                                                                       target="_blank"
-                                                                                       class="white-text"><i
-                    class="fa fa-twitter-square fa-2x"></i></a> <a href="https://www.facebook.com/qaobee"
-                                                                   target="_blank" class="white-text"><i
-                    class="fa fa-facebook-square fa-2x"></i></a> <a href="https://www.google.com/+QaobeeSARL"
-                                                                    target="_blank" class="white-text"><i
-                    class="fa fa-google-plus-square fa-2x"></i></a></div>
+            <div class="col l6 s12"><h5 class="red-text text-lighten-1" translate="landing.connect"></h5>
+                <a href="https://twitter.com/Qaobee" target="_blank" class="white-text"><i
+                        class="fa fa-twitter-square fa-2x"></i></a>
+                <a href="https://www.facebook.com/qaobee" target="_blank" class="white-text"><i
+                        class="fa fa-facebook-square fa-2x"></i></a>
+                <a href="https://www.google.com/+QaobeeSARL" target="_blank" class="white-text"><i
+                        class="fa fa-google-plus-square fa-2x"></i></a>
+            </div>
         </div>
     </div>
     <div class="footer-copyright">
-        <div class="container"><span class="white-text light">Copyright &copy; <b>Qaobee</b> 2015</span></div>
+        <div class="container"><span class="white-text light">Copyright &copy; <b>Qaobee</b> 2015
+            | <a href="#/legals">Mentions légales</a></span></div>
     </div>
 </footer>
 
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 <script>
-    (function (b, o, i, l, e, r) {
-        b.GoogleAnalyticsObject = l;
-        b[l] || (b[l] =
-                function () {
-                    (b[l].q = b[l].q || []).push(arguments)
-                });
-        b[l].l = +new Date;
-        e = o.createElement(i);
-        r = o.getElementsByTagName(i)[0];
-        e.src = '//www.google-analytics.com/analytics.js';
-        r.parentNode.insertBefore(e, r)
-    }(window, document, 'script', 'ga'));
-    ga('create', 'UA-XXXXX-X');
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-51340399-2', 'auto');
     ga('send', 'pageview');
+
 </script>
 
 <!-- build:js(src) scripts/vendor.js -->
