--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="icon" href="favicon.ico"/>
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
