--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,10 @@
     <meta charset="utf-8">
     <title>Gestion of sports data | Qaobee</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.ico"/>
-
+    
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <!-- <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.indigo-pink.min.css">
-    <script src="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.min.js"></script> -->
     
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
