--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <link rel="icon" href="favicon.ico"/>
     
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.6/animate.min.css" />
     
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
