--- a/src/index.html
+++ b/src/index.html
@@ -113,6 +113,11 @@
 <!-- angular templates will be automatically converted in js and inserted here -->
 <!-- endinject -->
 <!-- endbuild -->
-
+    <script src="../bower_components/momentjs/locale/de.js"></script>
+    <script src="../bower_components/momentjs/locale/en-gb.js"></script>
+    <script src="../bower_components/momentjs/locale/es.js"></script>
+    <script src="../bower_components/momentjs/locale/fr.js"></script>
+    <script src="../bower_components/momentjs/locale/it.js"></script>
+    
 </body>
 </html>
