--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,8 @@
     
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.6/animate.min.css" />
-    
+    <script src="http://maps.google.com/maps/api/js"></script>
+
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
