--- a/src/index.html
+++ b/src/index.html
@@ -80,6 +80,7 @@
          | <a href="#/legals" class="white-text" translate="landing.legals"></a></span></div>
     </div>
 </footer>
+<angular-feedback options="feedbackOptions"></angular-feedback>
 <script>
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
