--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,10 @@
  -->
     <meta charset="utf-8">
     <title>Gestion of sports data | Qaobee</title>
-    <meta name="description" content="">
+    <meta name="description" content="Qaobee est un espace de travail en ligne conçu pour et par les entraîneurs." />
+    <meta name="keywords" content="Sport, Data, analysis" />
+    <meta name="robots" content="index, follow" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.ico"/>
     
