--- a/src/index.html
+++ b/src/index.html
@@ -16,15 +16,15 @@
  -->
     <meta charset="utf-8">
     <title>Gestion of sports data | Qaobee</title>
-    <meta name="description" content="Qaobee est un espace de travail en ligne conçu pour et par les entraîneurs." />
-    <meta name="keywords" content="Sport, Data, analysis" />
-    <meta name="robots" content="index, follow" />
+    <meta name="description" content="Qaobee est un espace de travail en ligne conçu pour et par les entraîneurs."/>
+    <meta name="keywords" content="Sport, Data, analysis"/>
+    <meta name="robots" content="index, follow"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.ico"/>
-    
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.6/animate.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.6/animate.min.css"/>
     <script src="https://maps.google.com/maps/api/js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -59,14 +59,14 @@
 <footer class="page-footer grey" ng-hide="user">
     <div class="container">
         <div class="row">
-           <!-- <div class="col l9 s12">
-                <h5 class="red-text text-lighten-1">Company Bio</h5>
+            <!-- <div class="col l9 s12">
+                 <h5 class="red-text text-lighten-1">Company Bio</h5>
 
-                <p class="white-text light"><b>Qaobee</b> is a software company that develops and publishes digital
-                    solutions for the sporting community. We are a band of bretons who value sports, new technologies,
-                    innovation, teamwork and building things we can be proud of. During the week we come together to
-                    create innovative solutions to simplify and optimize the sports managers activity.</p>
-            </div>-->
+                 <p class="white-text light"><b>Qaobee</b> is a software company that develops and publishes digital
+                     solutions for the sporting community. We are a band of bretons who value sports, new technologies,
+                     innovation, teamwork and building things we can be proud of. During the week we come together to
+                     create innovative solutions to simplify and optimize the sports managers activity.</p>
+             </div>-->
             <div class="col l6 s12">
                 <h5 class="red-text text-lighten-1" translate="landing.connect"></h5>
                 <a href="https://twitter.com/Qaobee" target="_blank" class="white-text"><i
@@ -84,6 +84,17 @@
     </div>
 </footer>
 <angular-feedback options="feedbackOptions" meta="meta"></angular-feedback>
+<div class="fs-loader" ng-hide="loaded">
+    <div class="show-area">
+        <ul class="board">
+            <li><i class="material-icons">check_circle</i> Feeding unicorns</li>
+            <li><i class="material-icons">check_circle</i> Polishing gems</li>
+            <li><i class="material-icons">check_circle</i> Diging under the rainbow</li>
+            <li><i class="material-icons">check_circle</i> Finding dwarf's gold</li>
+            <li><i class="material-icons">check_circle</i> Feeling happy</li>
+        </ul>
+    </div>
+</div>
 <script>
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
@@ -117,11 +128,11 @@
 <!-- angular templates will be automatically converted in js and inserted here -->
 <!-- endinject -->
 <!-- endbuild -->
-    <script src="../bower_components/momentjs/locale/de.js"></script>
-    <script src="../bower_components/momentjs/locale/en-gb.js"></script>
-    <script src="../bower_components/momentjs/locale/es.js"></script>
-    <script src="../bower_components/momentjs/locale/fr.js"></script>
-    <script src="../bower_components/momentjs/locale/it.js"></script>
-    
+<script src="../bower_components/momentjs/locale/de.js"></script>
+<script src="../bower_components/momentjs/locale/en-gb.js"></script>
+<script src="../bower_components/momentjs/locale/es.js"></script>
+<script src="../bower_components/momentjs/locale/fr.js"></script>
+<script src="../bower_components/momentjs/locale/it.js"></script>
+
 </body>
 </html>
