--- a/src/index.html
+++ b/src/index.html
@@ -85,6 +85,7 @@
 </footer>
 <angular-feedback options="feedbackOptions" meta="meta"></angular-feedback>
 <div class="fs-loader" ng-hide="loaded">
+    <h1>Qaobee</h1>
     <div class="show-area">
         <ul class="board">
             <li><i class="material-icons">check_circle</i> Feeding unicorns</li>
@@ -95,23 +96,6 @@
         </ul>
     </div>
 </div>
-<script>
-    (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function () {
-                    (i[r].q = i[r].q || []).push(arguments)
-                }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-    ga('create', 'UA-72906581-1', 'auto');
-    ga('send', 'pageview');
-
-</script>
 
 <!-- build:js(src) scripts/vendor.js -->
 <!-- bower:js -->
