--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,8 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.6/animate.min.css"/>
-    <script src="https://maps.google.com/maps/api/js"></script>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script>
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyDBkDMv2zFHot2_eviHjdXyjijOv-vyoGA"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places&key=AIzaSyDBkDMv2zFHot2_eviHjdXyjijOv-vyoGA"></script>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
