--- a/src/index.html
+++ b/src/index.html
@@ -123,6 +123,6 @@
 <script src="../bower_components/momentjs/locale/es.js"></script>
 <script src="../bower_components/momentjs/locale/fr.js"></script>
 <script src="../bower_components/momentjs/locale/it.js"></script>
-
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 </body>
 </html>
