--- a/src/index.html
+++ b/src/index.html
@@ -19,20 +19,15 @@
     <meta name="description" content="Qaobee est un espace de travail en ligne conçu pour et par les entraîneurs."/>
     <meta name="keywords" content="Sport, Data, analysis"/>
     <meta name="robots" content="index, follow"/>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name=viewport content="width=device-width, initial-scale=1">
     <link rel="icon" href="favicon.ico"/>
-    <meta http-equiv="cache-control" content="max-age=0" />
-    <meta http-equiv="cache-control" content="no-cache" />
-    <meta http-equiv="expires" content="0" />
-    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
-    <meta http-equiv="pragma" content="no-cache" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.6/animate.min.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyDBkDMv2zFHot2_eviHjdXyjijOv-vyoGA"></script>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places&key=AIzaSyDBkDMv2zFHot2_eviHjdXyjijOv-vyoGA"></script>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
@@ -117,10 +112,12 @@
 <!-- angular templates will be automatically converted in js and inserted here -->
 <!-- endinject -->
 <!-- endbuild -->
-<script src="../bower_components/momentjs/locale/de.js"></script>
-<script src="../bower_components/momentjs/locale/en-gb.js"></script>
-<script src="../bower_components/momentjs/locale/es.js"></script>
-<script src="../bower_components/momentjs/locale/fr.js"></script>
-<script src="../bower_components/momentjs/locale/it.js"></script>
+<script async src="../bower_components/momentjs/locale/de.js"></script>
+<script async src="../bower_components/momentjs/locale/en-gb.js"></script>
+<script async src="../bower_components/momentjs/locale/es.js"></script>
+<script async src="../bower_components/momentjs/locale/fr.js"></script>
+<script async src="../bower_components/momentjs/locale/it.js"></script>
+<script async type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyDBkDMv2zFHot2_eviHjdXyjijOv-vyoGA"></script>
+<script async type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places&key=AIzaSyDBkDMv2zFHot2_eviHjdXyjijOv-vyoGA"></script>
 </body>
 </html>
