--- a/src/index.html
+++ b/src/index.html
@@ -116,8 +116,7 @@
 <script async src="../bower_components/momentjs/locale/en-gb.js"></script>
 <script async src="../bower_components/momentjs/locale/es.js"></script>
 <script async src="../bower_components/momentjs/locale/fr.js"></script>
-
-<script async type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyDBkDMv2zFHot2_eviHjdXyjijOv-vyoGA"></script>
-<script async type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places&key=AIzaSyDBkDMv2zFHot2_eviHjdXyjijOv-vyoGA"></script>
+<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDBkDMv2zFHot2_eviHjdXyjijOv-vyoGA"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 </body>
 </html>
