Ajustement charte graphique

--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
          | <a href="#/legals" class="white-text" translate="landing.legals"></a></span></div>
     </div>
 </footer>
-<angular-feedback options="feedbackOptions" meta="meta"></angular-feedback>
+<div class="hide-on-med-and-down"><angular-feedback options="feedbackOptions" meta="meta"></angular-feedback></div>
 <div class="fs-loader" ng-hide="loaded">
     <h1>Qaobee</h1>
     <div class="show-area">
