Harmonisation User concept

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 
  -->
     <meta charset="utf-8">
-    <title>Gestion of sports data | Qaobee</title>
+    <title>Sports data management | Qaobee</title>
     <meta name="description" content="Qaobee est un espace de travail en ligne conçu pour et par les entraîneurs."/>
     <meta name="keywords" content="Sport, Data, analysis"/>
     <meta name="robots" content="index, follow"/>
@@ -74,7 +74,7 @@
                         class="fa fa-twitter-square fa-2x"></i></a>
                 <a href="https://www.facebook.com/qaobee" target="_blank" class="white-text"><i
                         class="fa fa-facebook-square fa-2x"></i></a>
-                <a href="https://www.google.com/+QaobeeSARL" target="_blank" class="white-text"><i
+                <a href="https://plus.google.com/+Qaobee/about" target="_blank" class="white-text"><i
                         class="fa fa-google-plus-square fa-2x"></i></a>
             </div>
         </div>
