--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
                      innovation, teamwork and building things we can be proud of. During the week we come together to
                      create innovative solutions to simplify and optimize the sports managers activity.</p>
              </div>-->
-            <div class="col l6 s12">
+            <div class="col s12">
                 <h5 class="red-text text-lighten-1" translate="landing.connect"></h5>
                 <a href="https://twitter.com/Qaobee" target="_blank" class="white-text"><i
                         class="fa fa-twitter-square fa-2x"></i></a>
@@ -80,8 +80,10 @@
         </div>
     </div>
     <div class="footer-copyright">
-        <div class="container"><span class="white-text light">Copyright &copy; <b>Qaobee</b> 2015
-         | <a href="#/legals" class="white-text" translate="landing.legals"></a></span></div>
+        <div class="container">
+            <span class="white-text light">Copyright &copy; <b>Qaobee</b> 2015
+         |  <a href="#/legals" class="white-text" translate="landing.legals"></a>
+            <a href="mailto:contact@qaobee.com" class="white-text right"><i class="material-icons small">email</i></a></span></div>
     </div>
 </footer>
     
