--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,9 @@
     <meta name="robots" content="index, follow"/>
     <meta name=viewport content="width=device-width, initial-scale=1">
     <link rel="icon" href="favicon.ico"/>
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+    <meta http-equiv="Pragma" content="no-cache"/>
+    <meta http-equiv="Expires" content="0"/>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.6/animate.min.css"/>
@@ -83,10 +83,11 @@
         <div class="container">
             <span class="white-text light">Copyright &copy; <b>Qaobee</b> 2015
          |  <a href="#/legals" class="white-text" translate="landing.legals"></a>
-            <a href="mailto:contact@qaobee.com" class="white-text right"><i class="material-icons small">email</i></a></span></div>
+            <a href="mailto:contact@qaobee.com" class="white-text right"><i
+                    class="material-icons small">email</i></a></span></div>
     </div>
 </footer>
-    
+
 <div class="fs-loader" ng-hide="loaded">
     <h1>Qaobee</h1>
     <div class="show-area">
@@ -118,7 +119,12 @@
 <script async src="../bower_components/momentjs/locale/en-gb.js"></script>
 <script async src="../bower_components/momentjs/locale/es.js"></script>
 <script async src="../bower_components/momentjs/locale/fr.js"></script>
-<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDBkDMv2zFHot2_eviHjdXyjijOv-vyoGA"></script>
+<script
+        src="https://www.google.com/recaptcha/api.js?onload=vcRecaptchaApiLoaded&render=explicit"
+        async defer
+></script>
+<script type="text/javascript"
+        src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDBkDMv2zFHot2_eviHjdXyjijOv-vyoGA"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 </body>
 </html>
