--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
                      create innovative solutions to simplify and optimize the sports managers activity.</p>
              </div>-->
             <div class="col s12">
-                <h5 class="red-text text-lighten-1" translate="landing.connect"></h5>
+                <h5 class="accent-text-color" translate="landing.connect"></h5>
                 <a href="https://twitter.com/Qaobee" target="_blank" class="white-text"><i
                         class="fa fa-twitter-square fa-2x"></i></a>
                 <a href="https://www.facebook.com/qaobee" target="_blank" class="white-text"><i
