--- a/src/404.html
+++ b/src/404.html
@@ -62,7 +62,7 @@
 
     </div>
 </main>
-<footer class="page-footer grey" ng-hide="user">
+<footer class="page-footer grey" ng-if="!user">
     <div class="container">
         <div class="row">
             <div class="col l6 s12">
