--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
         <div ng-view class="view-animate" autoscroll="true"></div>
     </div>
 </main>
-<footer class="page-footer grey" ng-hide="user">
+<footer class="page-footer grey" ng-if="!user">
     <div class="container">
         <div class="row">
             <div class="col s12">
@@ -87,7 +87,7 @@
     </div>
 </footer>
 
-<div class="fs-loader" ng-hide="loaded">
+<div class="fs-loader" ng-if="!loaded">
     <h1>Qaobee</h1>
     <div class="show-area">
         <ul class="board">
