--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,10 @@
     <script language="JavaScript">
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker
-                    .register('./service-worker.js')
-                    .then(function() { console.log('Service Worker Registered'); });
+                .register('./service-worker.js')
+                .then(function () {
+                    console.log('Service Worker Registered');
+                });
         }
     </script>
     <link rel="manifest" href="/manifest.json">
@@ -70,11 +72,13 @@
             <div class="col s12">
                 <h5 class="accent-text-color" translate="landing.connect"></h5>
                 <a href="https://twitter.com/Qaobee" target="_blank" class="white-text"><i
-                        class="fa fa-twitter-square fa-2x"></i></a>
+                        class="fa fa-twitter-square fa-2x fa-fw"></i></a>
                 <a href="https://www.facebook.com/qaobee" target="_blank" class="white-text"><i
-                        class="fa fa-facebook-square fa-2x"></i></a>
+                        class="fa fa-facebook-square fa-2x fa-fw"></i></a>
                 <a href="https://plus.google.com/+Qaobee/about" target="_blank" class="white-text"><i
-                        class="fa fa-google-plus-square fa-2x"></i></a>
+                        class="fa fa-google-plus-square fa-2x fa-fw"></i></a>
+                <a href="mailto:contact@qaobee.com" class="white-text"><i
+                        class="fa fa-envelope fa-2x fa-fw"></i></a>
             </div>
         </div>
     </div>
@@ -82,8 +86,7 @@
         <div class="container">
             <span class="white-text light">Copyright &copy; <b>Qaobee</b> 2015
          |  <a href="#/legals" class="white-text" translate="landing.legals"></a>
-            <a href="mailto:contact@qaobee.com" class="white-text right"><i
-                    class="material-icons small">email</i></a></span></div>
+            </span></div>
     </div>
 </footer>
 
