--- a/src/index.html
+++ b/src/index.html
@@ -75,10 +75,11 @@
                         class="fa fa-twitter-square fa-2x fa-fw"></i></a>
                 <a href="https://www.facebook.com/qaobee" target="_blank" class="white-text"><i
                         class="fa fa-facebook-square fa-2x fa-fw"></i></a>
-                <a href="https://plus.google.com/+Qaobee/about" target="_blank" class="white-text"><i
-                        class="fa fa-google-plus-square fa-2x fa-fw"></i></a>
+                <a href="https://plus.google.com/+Qaobee/about" target="_blank" class="white-text"><i class="fa fa-google-plus-square fa-2x fa-fw"></i></a>
                 <a href="mailto:contact@qaobee.com" class="white-text"><i
                         class="fa fa-envelope fa-2x fa-fw"></i></a>
+                <a href="" data-target="modalSubMailingList" 
+                   class="white-text"><i class="fa fa-pencil-square fa-2x fa-fw"></i></a>
             </div>
         </div>
     </div>
@@ -102,6 +103,46 @@
         </ul>
     </div>
 </div>
+    
+<div id="modalSubMailingList" class="modal dark-primary-color">
+    <div class="modal-header center-align ">
+        <h5>
+            <i class="fa fa-envelope-o"></i>
+            <span translate="landing.contact.popin.title"></span>
+        </h5>
+    </div>
+    <!-- Begin MailChimp Signup Form -->
+
+    <div id="mc_embed_signup">
+        <div class="modal-content white">
+            <form action="//qaobee.us13.list-manage.com/subscribe/post?u=d55c6a8036c505a3675d0b352&amp;id=883987d33d"
+                  method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank"
+                  novalidate>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <label for="mce-EMAIL" translate="landing.contact.popin.email"></label>
+                        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" class="validate"
+                               required>
+                    </div>
+                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                        <input type="text" name="b_d55c6a8036c505a3675d0b352_883987d33d" tabindex="-1" value="">
+                    </div>
+
+                </div>
+                <div class="row center">
+                    <div class="col s12">&nbsp;</div>
+                    <div class="col s12">
+                        <a href="#/" class="modal-action modal-close waves-effect waves-white btn light-primary-color" translate="commons.buttons.cancel"></a>
+                        <button type="submit" class="btn waves-effect waves-white accent-color" value="Subscribe"
+                                name="subscribe"
+                                translate="commons.buttons.validate"></button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>    
 <!-- build:js(src) scripts/vendor.js -->
 <!-- bower:js -->
 <!-- run `gulp inject` to automatically populate bower script dependencies -->
