--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,9 @@
 
  -->
     <meta charset="utf-8">
-    <title>Sports data management | Qaobee</title>
-    <meta name="description" content="Qaobee est un espace de travail en ligne conçu pour et par les entraîneurs."/>
-    <meta name="keywords" content="Sport, Data, analysis"/>
+    <title>Qaobee handball - statistiques sportives</title>
+    <meta name="description" content="Qaobee HB est une application destinée aux coachs et entraîneurs de handball leur permettant de collecter les statistiques de leur joueurs durant un match ou un entraînement"/>
+    <meta name="keywords" content="handball, sport, coach, entraîneur, statistiques, données sportives, entraînement, joueur de handball"/>
     <meta name="robots" content="index, follow"/>
     <meta name=viewport content="width=device-width, initial-scale=1">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
@@ -214,26 +214,10 @@
     </div>
 </main>
 <footer class="page-footer grey" ng-if="!user">
-    <div class="container">
-        <div class="row">
-            <div class="col s12">
-                <h5 class="accent-text-color" translate="landing.connect"></h5>
-                <a href="https://twitter.com/Qaobee" target="_blank" class="white-text"><i
-                        class="fa fa-twitter-square fa-2x fa-fw"></i></a>
-                <a href="https://www.facebook.com/qaobee" target="_blank" class="white-text"><i
-                        class="fa fa-facebook-square fa-2x fa-fw"></i></a>
-                <a href="https://plus.google.com/+Qaobee/about" target="_blank" class="white-text"><i
-                        class="fa fa-google-plus-square fa-2x fa-fw"></i></a>
-                <a href="mailto:contact@qaobee.com" class="white-text"><i
-                        class="fa fa-envelope fa-2x fa-fw"></i></a>
-                <a href="" data-target="modalSubMailingList"
-                   class="white-text"><i class="fa fa-pencil-square fa-2x fa-fw"></i></a>
-            </div>
-        </div>
-    </div>
+    
     <div class="footer-copyright">
         <div class="container">
-            <span class="white-text light">Copyright &copy; <b>Qaobee</b> 2015
+            <span class="white-text">Copyright &copy; <b>Qaobee</b> 2015
          |  <a href="#/legals" class="white-text" translate="landing.legals"></a>
             </span></div>
     </div>
@@ -247,34 +231,6 @@
     </div>
     <!-- Begin MailChimp Signup Form -->
 
-    <div id="mc_embed_signup">
-        <div class="modal-content white">
-            <form action="//qaobee.us13.list-manage.com/subscribe/post?u=d55c6a8036c505a3675d0b352&amp;id=883987d33d"
-                  method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank"
-                  novalidate>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <label for="mce-EMAIL" translate="landing.contact.popin.email"></label>
-                        <input type="email" value="" name="EMAIL" class="email validate" id="mce-EMAIL" required>
-                    </div>
-                    <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                        <input type="text" name="b_d55c6a8036c505a3675d0b352_883987d33d" tabindex="-1" value=""/>
-                    </div>
-
-                </div>
-                <div class="row center">
-                    <div class="col s12">&nbsp;</div>
-                    <div class="col s12">
-                        <a href="#/" class="modal-action modal-close waves-effect waves-white btn light-primary-color"
-                           translate="commons.buttons.cancel"></a>
-                        <button type="submit" class="btn waves-effect waves-white accent-color" value="Subscribe"
-                                name="subscribe"
-                                translate="commons.buttons.validate"></button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
 </div>
 <!-- build:js(src) scripts/vendor.js -->
 <!-- bower:js -->
