QHBWEB-20  : Gérer le contenu de la page home | optimisations

--- a/src/index.html
+++ b/src/index.html
@@ -121,6 +121,7 @@
 <!-- endinject -->
 <!-- endbuild -->
 
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.6/animate.min.css"/>
 <script async src="../bower_components/momentjs/locale/de.js"></script>
 <script async src="../bower_components/momentjs/locale/en-gb.js"></script>
