--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     <meta name="twitter:site" content="@Qaobee" />
     <meta name="twitter:image" content="https://www.qaobee.com/assets/images/qaobee-logoRouge.png" />
     <meta name="twitter:creator" content="@Qaobee" />
-
+    <meta name="theme-color">
     <meta name=viewport content="width=device-width, initial-scale=1">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
     <meta http-equiv="Pragma" content="no-cache"/>
