bug fix mailinglist

--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,7 @@
             </span></div>
     </div>
 </footer>
-<div id="modalSubMailingList" class="modal dark-primary-color">
+<div id="modalSubMailingList" class="modal">
     <div class="modal-header center-align ">
         <h5>
             <i class="fa fa-envelope-o"></i>
@@ -104,6 +104,35 @@
     </div>
     <!-- Begin MailChimp Signup Form -->
 
+    <div id="mc_embed_signup">
+        <div class="modal-content grey lighten-3 ">
+            <form action="//qaobee.us13.list-manage.com/subscribe/post?u=d55c6a8036c505a3675d0b352&amp;id=883987d33d"
+                  method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank"
+                  novalidate>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <label for="mce-EMAIL" translate="landing.contact.popin.email"></label>
+                        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" class="validate"
+                               required>
+                    </div>
+                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                        <input type="text" name="b_d55c6a8036c505a3675d0b352_883987d33d" tabindex="-1" value="">
+                    </div>
+
+                </div>
+                <div class="row center">
+                    <div class="col s12">
+                        <a href="#/" class="modal-action modal-close waves-effect waves-red btn red"
+                           translate="commons.buttons.cancel"></a>
+                        <button type="submit" class="btn waves-effect waves-red  green darken-1" value="Subscribe"
+                                name="subscribe"
+                                translate="commons.buttons.validate"></button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
 <!-- build:js(src) scripts/vendor.js -->
 <!-- bower:js -->
