--- a/src/404.html
+++ b/src/404.html
@@ -52,7 +52,7 @@
 
                     <div class="center-align">
                         <h1 class="header center white-text text-accent-2 title" >Nothing here</h1>
-                        <a class="waves-effect waves-light btn" href="/#/">Back to home</a>
+                        <a class="waves-effect waves-light btn" href="/">Back to home</a>
 
                     </div>
                 </div>
@@ -78,7 +78,7 @@
     </div>
     <div class="footer-copyright">
         <div class="container"><span class="white-text light">Copyright &copy; <b>Qaobee</b> 2015
-         | <a href="#/legals" class="white-text" translate="landing.legals"></a></span></div>
+         | <a href="/legals" class="white-text" translate="landing.legals"></a></span></div>
     </div>
 </footer>
 <script>
