--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
  -->
     <meta charset="utf-8">
     <title>Qaobee handball - statistiques sportives</title>
+    <base href="/">
     <meta name="description"
           content="Qaobee HB est une application destinée aux coachs et entraîneurs de handball leur permettant de collecter les statistiques de leur joueurs durant un match ou un entraînement"/>
     <meta name="keywords"
@@ -308,16 +309,10 @@
         src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDgmw2WTzi6rbcC-WtWRmvK6YRA0Qd_v-g"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 <script>
-    (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-        a = s.createElement(o), m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-72906581-1', 'auto');
     ga('send', 'pageview');
