fixes QHBWEB-267 : [Xavier Marin] On ne peut pas cliquer dessus!

--- a/src/index.html
+++ b/src/index.html
@@ -257,7 +257,7 @@
                   method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank"
                   novalidate>
                 <div class="row">
-                    <div class="input-field col s12">
+                    <div class="col s12">
                         <label for="mce-EMAIL" translate="landing.contact.popin.email"></label>
                         <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" class="validate"
                                required>
